--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "remark-gfm": "^4.0.0",
     "router-dom": "^2.2.11"
   },
   "devDependencies": {
